# cansi-pattern

./: README.md  button_states.c
cansi-pattern-first-class-adt/w/exemplos/matrix/: main
cansi-pattern-first-class-adt/w/m/: ADT_c.tmpl
cansi-pattern-first-class-adt/w/u/test/1/: tags
cansi-pattern-first-class-adt/w/u/test/2/: tags
cansi-pattern-first-class-adt/w/u/test/3/: tags
cansi-pattern-first-class-adt/w/v/cansi/adt/: ADT_c.py  ADT_h.py  Address_h.py  Class1_h.py  Class2_h.py  MemoryPool_ADT_c.py  Order_h.py
cansi-pattern-state-loop/w/u/test/2/: tags
cansi-pattern-state/w/m/: Context_c.tmpl  Context_h.tmpl  StartedState_c.tmpl  StateInternal_h.tmpl  StateState_c.tmpl  StoppedState_c.tmpl
cansi-pattern-state/w/u/test/: Makefile
cansi-pattern-state/w/u/test/1/: CMakeLists.txt  DoisState.c  EstadoState.c  EstadoStateInternal.h  TresState.c  UmState.c  cheetah.sh  contexto.c  contexto.h  main.c  state.yml  tags
cansi-pattern-state/w/u/test/2/: DesligaState.c  DesligaState.h  LedState.c  LedState.h  LedStateInternal.h  LigaState.c  LigaState.h  blink.c  blink.h  exemplo.yml  main  main.c  message.c
cansi-pattern-state/w/u/test/3/: StartState.c  (+12 more)
cansi-pattern-state/w/v/: app.py
cansi-pattern-state/w/v/models/: tContext_c.py  tContext_h.py  tStartedState_c.py  tStartedState_h.py  tStateInternal_h.py  tStateState_c.py  tStateState_h.py  tState_c.py  tState_h.py  tStoppedState_c.py  tStoppedState_h.py  tmain_c.py  tmessage_c.py  tmessage_h.py
cansi-pattern-strategy/w/exemplos/matrix/: Makefile  main.c
cansi-pattern-strategy/w/m/: ADTStrategy_h.tmpl
(+46 files in other folders)
